--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="css/fontawesome-all.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/animate/animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 	
 	<!-- Favicon  -->
@@ -146,27 +147,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="h2-heading" >Offered Services</h1>
+                    <h1 class="h2-heading wow fadeInDown" data-delay="3s" >Services</h1>
                     <p class="p-heading">Web design and development have been my bread and butter for the past 1 year. During that time I've discovered that I can help startups and companies with the following services</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="text-box custom_bg wow slideInUp">
+                    <div class="text-box custom_bg wow slideInLeft" data-delay="7s">
                         <i class="far fa-gem"></i>
                         <h4 class="text-white">DESIGN</h4>
                         <p class="text-white">Successful online projects start with good design. It establishes a solid foundation for future development and allows for long term growth</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <div class="text-box custom_bg wow slideInUp">
+                    <div class="text-box custom_bg wow slideInLeft" data-delay="5s">
                         <i class="fas fa-code"></i>
                         <h4 class="text-white">DEVELOPMENT</h4>
                         <p class="text-white">I can code my own designs or even use the customer's design as base. My focus is to generate clean code that's well structured for reliability</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <div class="text-box custom_bg wow slideInUp">
+                    <div class="text-box custom_bg wow slideInLeft" data-delay="3s">
                         <i class="fas fa-tv"></i>
                         <h4 class="text-white">BASIC SEO</h4>
                         <p class="text-white">I can setup your project to use basic SEO principles which will push your project to the first page on search engines and save you ads money</p>
@@ -185,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="h2-heading mt-3">Delivered projects</h1>
+                    <h1 class="h2-heading mt-3 wow fadeInDown" data-delay="3s">Delivered projects</h1>
                     <p class="p-heading">Listed below are some of the most representative projects I've worked on. </p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -200,7 +201,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="text-container card shadow">
+                    <div class="text-container card shadow wow pulse">
                         <div class="image-container">                    
                                 <img class="img-fluid card-img-top" src="images/unifastgroup.jpeg" alt="alternative">                       
                         </div> <!-- end of image-container -->
@@ -212,7 +213,7 @@
                 </div>
                         
                 <div class="col-lg-6">
-                    <div class="text-container card shadow">
+                    <div class="text-container card shadow wow pulse">
                         <div class="image-container ">
                                 <img class="img-fluid card-img-top" src="images/ahmedghanim.jpeg" alt="alternative">
                         </div> <!-- end of image-container -->
@@ -244,7 +245,7 @@
             <h1 class="text-white mb-3">Contact Me</h1>
             <p class="mb-2 h6 text-white" ><i style="color:#0b36a8;" class="fa fa-map-marker-alt me-3"></i>
                 &nbsp; Trikaripur, Kasaragod</p>
-            <p class="mb-2"><a href="tel:9383492707" class=" text-white"><i style="color:#0b36a8" class="fa fa-phone-alt me-3 "></i>&nbsp; 9383492707</a></p>
+            <p class="mb-2"><a href="tel:+919383492707" class=" text-white"><i style="color:#0b36a8" class="fa fa-phone-alt me-3 "></i>&nbsp; +919383492707</a></p>
             <p class="mb-2"><a href="mailto:jaseelamohammed00@gmail.com" class=" text-white"><i style="color:#0b36a8" class="fa fa-envelope  me-3"></i>&nbsp; jaseelamohammed00@gmail.com</a></p>
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
