--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
     <!-- whatsapp icon -->
     <div class="whatsapp_btn_container">
-        <a href="https://wa.me/+971 55 558 4865"><img class="wasp" src="images/waspicon.png"></a>
+        <a href="https://wa.me/+919383492707"><img class="wasp" src="images/waspicon.png"></a>
       </div>
    
     <!-- Footer -->
