--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h2>Web Developer</h2>
-                        <h1 class="h1-large wow slideInLeft">Hi, I'm </h1>
+                        <h1 class="text-white" style="color:#0b36a8 !important;">Hi, I'm </h1>
                         <h1 class="h1-large wow slideInLeft"><span style="color:#0b36a8;">J</span>aseela KVP</h1>
                         
                     </div> <!-- end of text-container -->
