--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <h2>Web Developer</h2>
                         <h1 class="text-white" style="color:#0b36a8 !important;">Hi, I'm </h1>
                         <h1 class="h1-large wow slideInLeft"><span style="color:#0b36a8;">J</span>aseela KVP</h1>
-                        
+                        <a href="Jaseela-KVP_RESUME.pdf" class="btn-solid-lg page-scroll rounded-lg" download="Jaseela-KVP_Resume.pdf">Download Resume</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
