--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="IMAGES/favicon.ico">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
