--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/animate/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
     <link rel="icon" href="IMAGES/favicon.ico">
@@ -40,7 +40,7 @@
         <div class="container">
             
             <!-- Image Logo -->
-            <h2 class="text-white"><span style="color:#0b36a8;">J</span>aseela KVP</h2>
+            <h2 class="text-white"><span style="color:#424769;">J</span>aseela KVP</h2>
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Mark</a> -->
@@ -81,8 +81,8 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h2>Web Developer</h2>
-                        <h1 class="text-white" style="color:#0b36a8 !important;">Hi, I'm </h1>
-                        <h1 class="h1-large wow slideInLeft"><span style="color:#0b36a8;">J</span>aseela KVP</h1>
+                        <h1 class="text-white" style="color:#424769 !important;">Hi, I'm </h1>
+                        <h1 class="h1-large wow slideInLeft"><span style="color:#424769;">J</span>aseela KVP</h1>
                         <a href="Jaseela-KVP_RESUME.pdf" class="btn-solid-lg page-scroll rounded-lg" download="Jaseela-KVP_Resume.pdf">Download Resume</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -230,18 +230,21 @@
     <!-- end of works -->
 
     <!-- whatsapp icon -->
-    <div class="whatsapp_btn_container">
+    <!-- <div class="whatsapp_btn_container">
         <a href="https://wa.me/+919383492707"><img class="wasp" src="images/waspicon.png"></a>
-      </div>
+      </div> -->
+      <a href="https://wa.me/+919383492707" class="btn btn-md btn-primary rounded-circle  wasp"><i class="bi bi-whatsapp" style="font-size: 20px;"></i></i></a>
+
+    
    
     <!-- Footer -->
     <div class="footer " id="contact">
         <div class="container">
             <h1 class="text-white mb-3">Contact Me</h1>
-            <p class="mb-2 h6 text-white" ><i style="color:#0b36a8;" class="fa fa-map-marker-alt me-3"></i>
+            <p class="mb-2 h6 text-white" ><i style="color:#424769;" class="fa fa-map-marker-alt me-3"></i>
                 &nbsp; Trikaripur, Kasaragod</p>
-            <p class="mb-2"><a href="tel:+919383492707" class=" text-white"><i style="color:#0b36a8" class="fa fa-phone-alt me-3 "></i>&nbsp; +919383492707</a></p>
-            <p class="mb-2"><a href="mailto:jaseelamohammed00@gmail.com" class=" text-white"><i style="color:#0b36a8" class="fa fa-envelope  me-3"></i>&nbsp; jaseelamohammed00@gmail.com</a></p>
+            <p class="mb-2"><a href="tel:+919383492707" class=" text-white"><i style="color:#424769;" class="fa fa-phone-alt me-3 "></i>&nbsp; +919383492707</a></p>
+            <p class="mb-2"><a href="mailto:jaseelamohammed00@gmail.com" class=" text-white"><i style="color:#424769;" class="fa fa-envelope  me-3"></i>&nbsp; jaseelamohammed00@gmail.com</a></p>
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
     <!-- end of footer -->
