--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 <body data-spy="scroll" data-target=".fixed-top">
     
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <div class="container">
             
             <!-- Image Logo -->
-            <h2 class="text-white"><span style="color:#424769;">J</span>aseela KVP</h2>
+            <h2 class="text-white"><span style="color:#1B4242;">J</span>aseela KVP</h2>
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Mark</a> -->
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>Web Developer</h2>
-                        <h1 class="text-white" style="color:#424769 !important;">Hi, I'm </h1>
-                        <h1 class="h1-large wow slideInLeft"><span style="color:#424769;">J</span>aseela KVP</h1>
+                        <h2 style="color:#90939a">Web Developer</h2>
+                        <h1 class="text-white" style="color:#1B4242 !important;">Hi, I'm </h1>
+                        <h1 class="h1-large wow slideInLeft"><span style="color:#1B4242;">J</span>aseela KVP</h1>
                         <a href="Jaseela-KVP_RESUME.pdf" class="btn-solid-lg page-scroll rounded-lg" download="Jaseela-KVP_Resume.pdf">Download Resume</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="h2-heading wow fadeInDown" data-delay="3s" >Services</h1>
+                    <h1 class="h2-heading wow fadeInDown" data-delay="3s" style="color:#1B4242;">Services</h1>
                     <p class="p-heading">Web design and development have been my bread and butter for the past 1 year. During that time I've discovered that I can help startups and companies with the following services</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -187,7 +187,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="h2-heading mt-3 wow fadeInDown" data-delay="3s">Delivered Projects</h1>
+                    <h1 class="h2-heading mt-3 wow fadeInDown" data-delay="3s" style="color:#1B4242;">Delivered Projects</h1>
                     <p class="p-heading">Listed below are some of the most representative projects I've worked on. </p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -241,10 +241,10 @@
     <div class="footer " id="contact">
         <div class="container">
             <h1 class="text-white mb-3">Contact Me</h1>
-            <p class="mb-2 h6 text-white" ><i style="color:#424769;" class="fa fa-map-marker-alt me-3"></i>
+            <p class="mb-2 h6 text-white" ><i style="color:#1B4242;" class="fa fa-map-marker-alt me-3"></i>
                 &nbsp; Trikaripur, Kasaragod</p>
-            <p class="mb-2"><a href="tel:+919383492707" class=" text-white"><i style="color:#424769;" class="fa fa-phone-alt me-3 "></i>&nbsp; +919383492707</a></p>
-            <p class="mb-2"><a href="mailto:jaseelamohammed00@gmail.com" class=" text-white"><i style="color:#424769;" class="fa fa-envelope  me-3"></i>&nbsp; jaseelamohammed00@gmail.com</a></p>
+            <p class="mb-2"><a href="tel:+919383492707" class=" text-white"><i style="color:#1B4242;" class="fa fa-phone-alt me-3 "></i>&nbsp; +919383492707</a></p>
+            <p class="mb-2"><a href="mailto:jaseelamohammed00@gmail.com" class=" text-white"><i style="color:#1B4242;" class="fa fa-envelope  me-3"></i>&nbsp; jaseelamohammed00@gmail.com</a></p>
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
     <!-- end of footer -->
