--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="IMAGES/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -207,8 +207,8 @@
                                 <img class="img-fluid card-img-top" src="images/unifastgroup.jpeg" alt="alternative">                       
                         </div> <!-- end of image-container -->
                         <div class="card-body text-white">
-                            <h5 class="card-title">Unifast Technical Trading Company <br>Abudhabi</h5>
-                            <p class="card-text"><strong><br>URL:</strong> <a href="https://unifastgroup.com/" target="_blank">unifastgroup.com</a> </p>
+                            <h5 class="card-title" style="color:#1B4242;">Unifast Technical Trading Company <br>Abudhabi</h5>
+                            <p class="card-text" style="color:#1B4242;"><strong><br>URL:</strong> <a href="https://unifastgroup.com/" target="_blank">unifastgroup.com</a> </p>
                         </div> 
                     </div> 
                 </div>
@@ -219,8 +219,8 @@
                                 <img class="img-fluid card-img-top" src="images/ahmedghanim.jpeg" alt="alternative">
                         </div> <!-- end of image-container -->
                         <div class="card-body">
-                            <h5 class="card-title">Ahmed Ghanim Electromechanical Services <br> Dubai </h5>
-                            <p class="card-text"><strong><br>URL:</strong> <a href="https://www.ahmedghanim.com/" target="_blank">www.ahmedghanim.com</a></p>
+                            <h5 class="card-title" style="color:#1B4242;">Ahmed Ghanim Electromechanical Services <br> Dubai </h5>
+                            <p class="card-text" style="color:#1B4242;"><strong><br>URL:</strong> <a href="https://www.ahmedghanim.com/" target="_blank">www.ahmedghanim.com</a></p>
                         </div> 
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->   
